--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Switch",
+    "name": "switch",
     "version": "1.0.0",
     "author": "Alexandru Florian Barascu",
     "private": true,
@@ -20,16 +20,20 @@
         "@angular/platform-browser": "4.4.3",
         "@angular/platform-browser-dynamic": "4.4.3",
         "@ionic-native/android-permissions": "^4.3.0",
+        "@ionic-native/background-mode": "^4.3.0",
         "@ionic-native/core": "3.12.1",
-        "@ionic-native/splash-screen": "3.12.1",
+        "@ionic-native/device-motion": "^4.3.0",
+        "@ionic-native/gyroscope": "^4.3.0",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
         "cordova-plugin-android-permissions": "^1.0.0",
+        "cordova-plugin-background-mode": "^0.7.2",
         "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-device-motion": "^1.2.5",
+        "cordova-plugin-gyroscope": "^0.1.4",
         "cordova-plugin-ringermode": "0.0.6",
-        "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
         "ionic-angular": "3.7.1",
@@ -47,12 +51,14 @@
     "cordova": {
         "plugins": {
             "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "cordova-plugin-android-permissions": {},
-            "cordova-plugin-ringermode": {}
+            "cordova-plugin-ringermode": {},
+            "cordova-plugin-device-motion": {},
+            "cordova-plugin-gyroscope": {},
+            "cordova-plugin-background-mode": {}
         },
         "platforms": [
             "android",
